--- a/SDL_HapticNumEffectsPlaying.mediawiki
+++ b/SDL_HapticNumEffectsPlaying.mediawiki
@@ -14,7 +14,7 @@ int SDL_HapticNumEffectsPlaying(SDL_Haptic* haptic)
 == Function Parameters ==
 {|
 |'''haptic'''
-|the haptic device to query ^for^ maximum playing effects
+|the SDL_Haptic device to query ,,maximum playing effects,,
 |}
 
 == Return Value ==
