--- a/SDL_HapticPause.mediawiki
+++ b/SDL_HapticPause.mediawiki
@@ -14,7 +14,7 @@ int SDL_HapticPause(SDL_Haptic* haptic)
 == Function Parameters ==
 {|
 |'''haptic'''
-|^a pointer to the^ haptic device to pause
+|^the^ SDL_Haptic device to pause
 |}
 
 == Return Value ==
