--- a/SDL_HapticSetAutocenter.mediawiki
+++ b/SDL_HapticSetAutocenter.mediawiki
@@ -15,7 +15,7 @@ int SDL_HapticSetAutocenter(SDL_Haptic* haptic,
 == Function Parameters ==
 {|
 |'''haptic'''
-|^a pointer to the^ haptic device to set autocentering on
+|^the^ SDL_Haptic device to set autocentering on
 |-
 |'''autocenter'''
 |value to set autocenter to^(0-100)^, 0 disables autocentering; see [[#Remarks|Remarks]] for details
