--- a/SDL_HapticSetGain.mediawiki
+++ b/SDL_HapticSetGain.mediawiki
@@ -15,10 +15,10 @@ int SDL_HapticSetGain(SDL_Haptic* haptic,
 == Function Parameters ==
 {|
 |'''haptic'''
-|^a pointer to the^ haptic device to set the gain on
+|^the^ SDL_Haptic device to set the gain on
 |-
 |'''gain'''
-|value to set the gain to, should be between 0 and 100
+|value to set the gain to, ,,should be between 0 and 100,, ^(0 - 100)^
 |}
 
 == Return Value ==
