--- a/SDL_HapticStopEffect.mediawiki
+++ b/SDL_HapticStopEffect.mediawiki
@@ -15,7 +15,7 @@ int SDL_HapticStopEffect(SDL_Haptic* haptic,
 == Function Parameters ==
 {|
 |'''haptic'''
-|^a pointer to the^ haptic device to stop the effect on
+|^the^ SDL_Haptic device to stop the effect on
 |-
 |'''effect'''
 |^ID^ ,,identifier,, of the ^haptic^ effect to stop
