--- a/SDL_AudioSpec.mediawiki
+++ b/SDL_AudioSpec.mediawiki
@@ -47,6 +47,8 @@ A structure that contains the audio output format. It ^also^ contains a callback
 |a pointer that is passed as the first parameter to '''callback'''
 |}
 
+<<Color2(green,Seems like '''userdata''' should be an exception to the 'pointer rule'.)>>
+
 == Code Examples ==
 ```c++
 You can add your code example here
