--- a/SDL_AudioInit.mediawiki
+++ b/SDL_AudioInit.mediawiki
@@ -13,7 +13,7 @@ int SDL_AudioInit(const char* driver_name)
 == Function Parameters ==
 {|
 |'''driver_name'''
-|^a pointer to^ the name of the desired audio driver
+|the name of the desired audio driver
 |}
 
 == Return Value ==
