--- a/SDL_BuildAudioCVT.mediawiki
+++ b/SDL_BuildAudioCVT.mediawiki
@@ -20,7 +20,7 @@ int SDL_BuildAudioCVT(SDL_AudioCVT*   cvt,
 == Function Parameters ==
 {|
 |'''cvt'''
-|a pointer to an [[SDL_AudioCVT]] structure that is filled in with audio conversion information
+|an [[SDL_AudioCVT]] structure that is filled in with audio conversion information
 |-
 |'''src_format'''
 |the source format of the audio data; for more info see [[SDL_AudioFormat]]
