update content - pointers, struct

--- a/SDL_FreeWAV.mediawiki
+++ b/SDL_FreeWAV.mediawiki
@@ -13,7 +13,7 @@ void SDL_FreeWAV(Uint8* audio_buf)
 == Function Parameters ==
 {|
 |'''audio_buf'''
-|a pointer to the buffer created by [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]()
+|,,a pointer to ,,the buffer created by [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]()
 |}
 
 == Code Examples ==
