update content - pointers, struct

--- a/SDL_GetAudioDeviceStatus.mediawiki
+++ b/SDL_GetAudioDeviceStatus.mediawiki
@@ -16,8 +16,10 @@ SDL_audiostatus SDL_GetAudioDeviceStatus(SDL_AudioDeviceID dev)
 == Function Parameters ==
 {|
 |'''dev'''
-|the ID of the audio device
+|the ID of ,,the,, ^an^ audio device ^previously opened with [[SDL_OpenAudioDevice]]()^
 |}
+
+<<Color2(green,Should SDL_Audio<code></code>DeviceID be specifically mentioned like a struct would be although it is a typedef? It has no page.)>>
 
 == Return Value ==
 Returns the status of the specified audio device which may be any of the following:
