--- a/SDL_LoadWAV.mediawiki
+++ b/SDL_LoadWAV.mediawiki
@@ -19,13 +19,13 @@ SDL_AudioSpec* SDL_LoadWAV(const char*    filename,
 |the name of the file to load 
 |-
 |'''spec''' 
-|specifies the target audio format; see [[SDL_AudioSpec]] for more info 
+|,,specifies,, the target audio format; see [[SDL_AudioSpec]] for details ''-or-'' an [[SDL_AudioSpec]] structure representing the desired output format 
 |-
 |'''audio_buf''' 
-|specifies the audio buffer 
+|,,specifies,, the audio buffer 
 |-
 |'''audio_len''' 
-|specifies the length of the audio buffer in bytes 
+|,,specifies,, the length of the audio buffer in bytes 
 |}
 
 == Return Value ==
