--- a/SDL_MixAudio.mediawiki
+++ b/SDL_MixAudio.mediawiki
@@ -17,13 +17,13 @@ void SDL_MixAudio(Uint8*       dst,
 == Function Parameters ==
 {|
 |'''dst'''
-|points to the destination for the mixed audio
+|the destination for the mixed audio
 |-
 |'''src'''
-|points to the source audio buffer to be mixed
+|the source audio buffer to be mixed
 |-
 |'''len'''
-|defines the length of the audio buffer in bytes
+|,,defines ,,the length of the audio buffer in bytes
 |-
 |'''volume'''
 |ranges from 0 - 128, and should be set to SDL_MIX_MAXVOLUME for full audio volume
