--- a/SDL_UnlockAudioDevice.mediawiki
+++ b/SDL_UnlockAudioDevice.mediawiki
@@ -16,6 +16,8 @@ void SDL_UnlockAudioDevice(SDL_AudioDeviceID dev)
 |the ID of the device to be unlocked
 |}
 
+<<Color2(green,Should SDL_Audio<code></code>DeviceID be specifically mentioned like a struct would be although it is a typedef? It has no page.)>>
+
 == Code Examples ==
 ```c++
 You can add your code example here
