--- a/SDL_WaitThread.mediawiki
+++ b/SDL_WaitThread.mediawiki
@@ -15,11 +15,13 @@ void SDL_WaitThread(SDL_Thread* thread,
 == Function Parameters ==
 {|
 |'''thread'''
-|^a pointer to the [[SDL_Thread]]() to wait for^
+|^the [[SDL_Thread]] to wait for^
 |-
 |'''status'''
-|^a pointer filled with status data^; see [[#Remarks|Remarks]] for details
+|^status data^; see [[#Remarks|Remarks]] for details
 |}
+
+<<Color2(green,Is '''status''' an exception to the 'pointer rule'?)>>
 
 == Code Examples ==
 ```c++
