--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -35,6 +35,13 @@ There are 3 primitives available in SDL:
 
 Note that a ''semaphore'' can behave much like a ''mutex'' if the count never exceeds 1.  Like a ''mutex'', a ''semaphore'' limited to 1 can only allow 1 thread past its "check point" in the process.  This effectively removes the possibility of another thread using the same data simultaneously.-~
 
+<<Color2(green,Would a better analogy be one using people waiting in line to ride an amusement park ride?  The ride arrives and passengers unload - freeing up seats.  The semaphore tracks the # of seats becoming available (I guess this would be counting up) and then releases that many waiting patrons from the line simultaneously.  From there it is a free-for-all to find a specific empty seat.  The equivalent of the mutex might be a person sitting down and locking the restraint device in place.  Once they're locked in no one else can sit in that seat.  It is the job of the patrons (threads) to find their own seat (resource) and lock it (lock the mutex).  If the semaphore is working there won't ever be more patrons than seats so the last one will still have a seat.  It just may take a moment to find and get to it.  The old monorail at the SD WAP comes to mind as an example - the quickest guests get their pick of the seats but the attendants never let more people in than there are seats so the slowest to board will still have a seat to take.  The problem w/ this specific example is the lack of specific restraint device (mutex) although just sitting and taking space could be equivalent to locking the mutex assuming no one is willing to forcibly remove someone from their seat.)>>
+
+<<Color2(green,To carry this analogy forward would it work that there is another semaphore that counts down as people fill the seats?  The ride operator monitors this semaphore to know when everyone is on board and locked in so they can start the ride.  Could this be a counter that tells the operator to go when it reaches 0 empty seats?  In reality would you actually use 2 separate semaphores or would one be enough since they technically count up and down and the only difference is the starting point?  Could the operator watch for the same semaphore that allowed passengers to be loaded to reach 0 to say go?)>>
+
+<<Color2(purple,Fundamental question - Is the only difference between a semaphore that counts up and one that counts down the starting value?  Up starts at 0 and down starts at some whole number >0?)>>
+
+
  ~-''Analogy - counting down:''  This is similar to waiting in a single line for access to any one of a number of check stands, like you might do at some "big box" stores (ex: Fry's Electronics).  There are so many check stands that you can't see which are open for sure, more than one check stand might become available simultaneously so multiple customers could move forward at the same time, and it would be embarrassing and awkward to leave the line only to find that the space you thought was available isn't and there's nowhere to go.  In real life this can be resolved with lights above each check stand to indicate when one is available.  The eyes and brains of the customers provide the remainder of the problem-solving.  In programming terms, you resolve this with ''mutexes'' and a ''semaphore''.
 *A ''semaphore'' is used in lieu of lights to provide a count of available data structures (check stands).  The ''semaphore'' allows the same number of threads (customers) as available data structures (check stands) to simultaneously attempt to access the data (approach the check stands).  If there is no available data (check stands are all in use or all closed) then the semaphore tells all the threads (customers) to wait.
 *A ''mutex'' protects each data structure (check stand) from being accessed by more than one thread (customer) at a time. (See [[#Mutex|above]] for ''mutex'' details.)
