--- a/SDL_mutexP.mediawiki
+++ b/SDL_mutexP.mediawiki
@@ -14,7 +14,7 @@ int SDL_mutexP(SDL_mutex* mutex)
 == Function Parameters ==
 {|
 |'''mutex'''
-|^a pointer to the SDL_mutex structure / mutex to be locked^
+|^the SDL_mutex to be locked^
 |}
 
 == Return Value ==
