--- a/SDL_SemPost.mediawiki
+++ b/SDL_SemPost.mediawiki
@@ -16,7 +16,7 @@ int SDL_SemPost(SDL_sem* sem)
 == Function Parameters ==
 {|
 |'''sem'''
-|^a pointer to the SDL_sem structure / semaphore to be incremented^
+|^the SDL_sem to be incremented^
 |}
 
 == Return Value ==
