--- a/SDL_SemTryWait.mediawiki
+++ b/SDL_SemTryWait.mediawiki
@@ -14,7 +14,7 @@ int SDL_SemTryWait(SDL_sem* sem)
 == Function Parameters ==
 {|
 |'''sem'''
-|^a pointer to the SDL_sem structure / semaphore to be decremented^
+|^the SDL_sem to be decremented^
 |}
 
 == Return Value ==
