--- a/SDL_AtomicLock.mediawiki
+++ b/SDL_AtomicLock.mediawiki
@@ -14,9 +14,10 @@ void SDL_AtomicLock(SDL_SpinLock* lock)
 == Function Parameters ==
 {|
 |'''lock'''
-|,,points to the lock,, ^a pointer to the desired spin lock^
+|,,points to the lock,, ^the desired SDL_SpinLock to lock^
 |}
-<<Color2(green,Does the function change the setting of the lock struct to non-0 automatically when it is called?  Unlock changes it back to 0?)>>
+
+<<Color2(green,Should SDL_SpinLock be changed to spin lock because it's a typedef with no page?  Does this function change the setting of a lock struct (typedef?) to non-0 automatically when it is called?  Unlock changes it back to 0?)>>
 
 == Code Examples ==
 ```c++
