--- a/SDL_RWFromFile.mediawiki
+++ b/SDL_RWFromFile.mediawiki
@@ -15,11 +15,13 @@ SDL_RWops* SDL_RWFromFile(const char* file,
 == Function Parameters ==
 {|
 |'''file'''
-|^a pointer to the file containing the information to fill an SDL_RWops structure with^
+|,,a pointer to ,,^the file containing the information to fill an SDL_RWops structure with^
 |-
 |'''mode'''
-|^a pointer to the mode to be used for/in the SDL_RWops structure^; see [[#Remarks|Remarks]] for details
+|,,a pointer to ,,^the mode to be used for/in the SDL_RWops structure^; see [[#Remarks|Remarks]] for details
 |}
+
+<<Color2(green,Are these exceptions to the 'pointer rule'?)>>
 
 == Return Value ==
 Returns a pointer to the SDL_RWops structure that is created, *or NULL on failure*.
