--- a/SDL_RWtell.mediawiki
+++ b/SDL_RWtell.mediawiki
@@ -11,13 +11,12 @@ Use this function to *perform a do-nothing seek to get the current offset in an 
 long SDL_RWtell(struct SDL_RWops* context)
 ```
 
-<<Color2(green,Begin comment that requires commas and therefore can't easily be in green:)>>
-The old wiki says this has only 1 param - ctx - but both the old wiki and header also list the following ```(ctx)->seek(ctx, 0, RW_SEEK_CUR)``` which appears to specify 3 params.  Does the SDL_RWtell macro call the seek function of the SDL_RWops struct then uses the given '''context''' + an '''offset''' of 0  + '''whence''' of RW_SEEK_CUR as the settings to find the current location in the data?  I don't know how to properly represent that here.  See purple below for my attempt.)<br/><<Color2(green,End comment.)>>
+<<Color2(green,Begin comment that requires commas and therefore can't easily be in green:)>><br/>The old wiki says this has only 1 param - ctx - but both the old wiki and header also list the following ```(ctx)->seek(ctx, 0, RW_SEEK_CUR)``` which appears to specify 3 params.  Does the SDL_RWtell macro call the seek function of the SDL_RWops struct then uses the given '''context''' + an '''offset''' of 0  + '''whence''' of RW_SEEK_CUR as the settings to find the current location in the data?  I don't know how to properly represent that here.  See purple below for my attempt.)<br/><<Color2(green,End comment.)>>
 
 == Function Parameters ==
 {|
 |'''context'''
-|a pointer to an SDL_RWops structure
+|an SDL_RWops structure ^containing the tell function???^
 |}
 
 == Return Value ==
