--- a/SDL_DirtyTexture.mediawiki
+++ b/SDL_DirtyTexture.mediawiki
@@ -15,7 +15,7 @@ void SDL_DirtyTexture(SDL_Texture*    texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the SDL_Texture to mark dirty, which was created with SDL_TEXTUREACCESS_STREAMING
+|the texture to mark dirty, which was created with SDL_TEXTUREACCESS_STREAMING
 |-
 |'''numrects'''
 |the number of rectangles pointed to by '''rects'''
