--- a/SDL_GetRenderDrawColor.mediawiki
+++ b/SDL_GetRenderDrawColor.mediawiki
@@ -16,16 +16,16 @@ int SDL_GetRenderDrawColor(Uint8* r,
 == Function Parameters ==
 {|
 |'''r'''
-|the red value used to draw on the rendering target
+|a pointer filled in with the red value used to draw on the rendering target
 |-
 |'''g'''
-|the green value used to draw on the rendering target
+|a pointer filled in with the green value used to draw on the rendering target
 |-
 |'''b'''
-|the blue value used to draw on the rendering target
+|a pointer filled in with the blue value used to draw on the rendering target
 |-
 |'''a'''
-|the alpha value used to draw on the rendering target; usually SDL_ALPHA_OPAQUE (255)
+|a pointer filled in with the alpha value used to draw on the rendering target; usually SDL_ALPHA_OPAQUE (255)
 |}
 
 == Return Value ==
