--- a/SDL_GetTextureAlphaMod.mediawiki
+++ b/SDL_GetTextureAlphaMod.mediawiki
@@ -14,7 +14,7 @@ int SDL_GetTextureAlphaMod(SDL_Texture* texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the SDL_Texture to query
+|the texture to query
 |-
 |'''alpha'''
 |a pointer filled in with the current alpha value
